--- a/build.html
+++ b/build.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
+<meta name="description" content="Build tutorial for KinectAnimationStudio. Describes build requirements and steps.">
+<meta name="keywords" content="Build,KinectAnimationStudio,FBX">
 
     <title>KinectAnimationStudio - Build</title>
 
