--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
+<meta name="description" content="KinectAnimationStudio is a simple open-source tool that allows you to export Kinect skeleton data as FBX motion files.">
+<meta name="keywords" content="KinectAnimationStudio,FBX,Kinect,export,animation,mocap">
 
     <title>KinectAnimationStudio</title>
 
