--- a/usage.html
+++ b/usage.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
+<meta name="description" content="Tutorial on how to use KinectAnimationStudio to generate FBX files from your Kinect. Includes important considerations about the data that is generated.">
+<meta name="keywords" content="Tutorial,KinectAnimationStudio,FBX,Kinect,Skeleton,Issues">
+
 
     <title>KinectAnimationStudio - Usage</title>
 
