--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="KinectAnimationStudio is a simple open-source tool that allows you to export Kinect skeleton data as FBX motion files.">
 <meta name="keywords" content="KinectAnimationStudio,FBX,Kinect,export,animation,mocap">
+<meta name="author" content="Antonio Carlos Salzvedel Furtado Junior">
+
 
     <title>KinectAnimationStudio</title>
 
