--- a/build.html
+++ b/build.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Build tutorial for KinectAnimationStudio. Describes build requirements and steps.">
 <meta name="keywords" content="Build,KinectAnimationStudio,FBX">
+<meta name="author" content="Antonio Carlos Salzvedel Furtado Junior">
+
 
     <title>KinectAnimationStudio - Build</title>
 
