--- a/usage.html
+++ b/usage.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Tutorial on how to use KinectAnimationStudio to generate FBX files from your Kinect. Includes important considerations about the data that is generated.">
 <meta name="keywords" content="Tutorial,KinectAnimationStudio,FBX,Kinect,Skeleton,Issues">
+<meta name="author" content="Antonio Carlos Salzvedel Furtado Junior">
+
 
 
     <title>KinectAnimationStudio - Usage</title>
